--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
     {{- end -}}
   </div>
   <div class="footer-info">
-    {{ dateFormat "2006" now }} {{ with .Site.Copyright }} {{ . }} | {{ end }} </div>
+    {{ dateFormat "2006" now }} {{ with .Site.Copyright }} {{ . }} {{ end }} </div>
 </footer>
 {{ if not hugo.IsServer }}
 {{ template "_internal/google_analytics.html" . }}
